# SDL2CmakeSample

./: .editorconfig  CMakeLists.txt  README.md
src/: Main.cpp
test/: CMakeLists.txt
